# OpenSpec-rs

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  INSTALLATION.md  STATE.md  opencode-folder-structure.md  openspec-docker-wrapper.md  openspec-folder-structure.md
docs/sync-v1.2-to-v1.4.1/: bucket-a-plan.md  commits.txt  diffstat.txt  name-status.txt
openspec/changes/cli-parity-upstream/: design.md  proposal.md  tasks.md
openspec/changes/sync-upstream-v1-4-1/: proposal.md  tasks.md
openspec/specs/ai-tool-integration/: spec.md
openspec/specs/cli-commands/: spec.md
openspec/specs/config-management/: spec.md
openspec/specs/context-store/: spec.md
openspec/specs/initiatives/: spec.md
openspec/specs/shell-completion/: spec.md
openspec/specs/spec-parser/: spec.md
openspec/specs/telemetry/: spec.md
openspec/specs/workflow-engine/: spec.md
openspec/specs/workspace/: spec.md
src/: lib.rs  main.rs  test_support.rs
src/ai_tools/: generator.rs
src/cli/: archive.rs  args.rs  completion.rs  config.rs  context_store.rs  feedback.rs  init.rs  initiative.rs  instructions.rs  list.rs  mod.rs  new_change.rs  schema.rs  schemas.rs  set.rs  show.rs  status.rs  templates.rs  update.rs  validate.rs  workspace.rs
src/core/: artifact.rs  config.rs  error.rs  mod.rs  schema.rs  spec_parser.rs
src/telemetry/: client.rs  mod.rs
src/templates/: commands.rs  mod.rs  skills.rs
src/utils/: output.rs  progress.rs
templates/skills/: apply-change.md  archive-change.md  explore.md  propose.md  sync-specs.md  verify-change.md
tests/: integration_tests.rs
(+52 files in other folders)
